# Masters-Project

FisieseData/: FeetPlacementData.mlx  IMUdata.mlx  IMUdataRec_tau025.csv  IMUdataRec_tau05.csv  IMUdataRec_tau1.csv  IMUdataRec_tau5.csv  SpeedData.mlx  WHeadingControlData.mlx  WayPointdataRec025.csv  WayPointdataRec1.csv  WayPointdataRec5.csv  WaypointNavData.mlx  feetPlace_leg1_3_5 V2.csv  headrateData.mlx  headrateRec2.csv  headrateRec3.csv  headrateRec4.csv  leg135_motion_controller_data.csv  motioncontrolData.mlx  posContRec1.csv  posControlData.mlx  speedRec.csv  speedRec2.csv  speedRec3.csv  waypnav1.csv  waypnav2.csv  waypnav3.csv
Jetson/AnotherHexapod_stuff/: CMakeLists.txt  package.xml
Jetson/AnotherHexapod_stuff/launch/: walk.launch
Jetson/AnotherHexapod_stuff/src/: AnotherSent_Data.csv  AnotherSent_DataV1.csv  IK.py  (+13 more)
Jetson/Meesters/: contr.py  lets_checkk.cpp
Matlab/: FK01.m  FootPlan3_W.m  ForwardKinematics.m  ForwardKinematicsSim.slx  ForwardKinematicsSim2.slx  ForwardKinematicsSim2.slxc  InverseKinematics.mlx  MODE.m  PP.asv  PP.m  PP3_W.m  Path.mlx  TurnPath.m  input_Example.mlx  makepath.m  makepath3_W.m  plotfk.mlx
MatlabV2/: FK02.m  FK03.m  FootPlan.m  IK.m  PP.m  TurnPath.m  plotfk.mlx
catkin_ws/src/: contr.py  marvelmindTest.py  realSCamDemo.py
catkin_ws/src/controller/: CMakeLists.txt  package.xml
catkin_ws/src/controller/src/: control.cpp
hexapod_stuff/: CMakeLists.txt  package.xml
hexapod_stuff/src/: FK.py  IK.py  PlannerV0.py  PlannerV1.py  TurnPath.py  WalkPath.py  hexapodC.py  interpo.py  motor_control.py  movefunc.py
(+84 files in other folders)
